--- a/src/index.jade
+++ b/src/index.jade
@@ -24,6 +24,7 @@ html(
         meta(property='og:image',         content='#{IMG}')
         meta(property='og:description',   content='#{DESCRIPTION}')
 
+        link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Palanquin:100')
         // build:css(.) /dist/css/BrennanVance.min.css
         link(rel='stylesheet', href='/bower_components/normalize.css/normalize.css')
         link(rel='stylesheet', href='/dist/css/BrennanVance.css')
