--- a/src/index.jade
+++ b/src/index.jade
@@ -25,7 +25,7 @@ html(
         meta(property='og:description',   content='#{DESCRIPTION}')
 
         link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Palanquin:100')
-        // build:css(.) /dist/css/BrennanVance.min.css
+        // build:css(.) dist/css/BrennanVance.min.css
         link(rel='stylesheet', href='/bower_components/normalize.css/normalize.css')
         link(rel='stylesheet', href='/dist/css/BrennanVance.css')
         // endbuild
@@ -41,7 +41,7 @@ html(
                         | contact
 
         div.c-view(ng-view)
-        // build:js(.) /dist/js/BrennanVance.min.js
+        // build:js(.) dist/js/BrennanVance.min.js
         script(src="/bower_components/angular/angular.js")
         script(src="/bower_components/angular-route/angular-route.js")
         script(src="/src/js/BrennanVance.js")
