--- a/src/index.jade
+++ b/src/index.jade
@@ -13,7 +13,7 @@ html(
         - var TITLE = 'Brennan Vance - Filmmaker'
         - var DESCRIPTION = 'Brennan Vance - Filmmaker'
         - var URL = 'http://BrennanVance.com'
-        - var IMG = URL + '/dist/img/BrennanVance.jpg'
+        - var IMG = URL + '/dist/img/BrennanVance.png'
 
         title #{TITLE}
 
