Change description and title punctuation

--- a/src/index.jade
+++ b/src/index.jade
@@ -10,8 +10,8 @@ html(
         link(rel='shortcut icon', href='favicon.ico', type='image/x-icon')
         link(rel='icon', href='favicon.ico', type='image/x-icon')
 
-        - var TITLE = 'Brennan Vance - Filmmaker'
-        - var DESCRIPTION = 'Brennan Vance - Filmmaker'
+        - var TITLE = 'Brennan Vance. Filmmaker.'
+        - var DESCRIPTION = 'Brennan Vance. Filmmaker.'
         - var URL = 'http://BrennanVance.com'
         - var IMG = URL + '/dist/img/BrennanVance.jpg'
 
